--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
@@ -129,7 +129,6 @@
             </div>
         </div>
     </nav>
-    <h3>ZAKAZIVANjE TERMINA</h3>
     <div class="col-lg-8 mx-auto">
                 <select name="feedbackOption" id="feedbackOption" v-model="status" v-on:change="statusChanged" style="width:200px; margin-left: 520px; margin-top: 20px;">
                     <option value="Nikola Nikolic">Nikola Nikolic</option>
@@ -137,12 +136,23 @@
                     <option value="Ivan Ivic">Ivan Ivic</option>
                 </select>
             </div>
-    <!-- Contact Section-->
-    <section class="page-section" id="contact">
-        <div class="container" id="feedbacks">
-          
+
+    <div id="specializations">
+        <div class="container">
+            <!-- Contact Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Your specializations</h2>
+            <!-- Icon Divider-->
+            <!-- Contact Section Form-->
+            <div class="commentBox" v-for="specialization in specializations">
+                <div class="col-lg-8 mx-auto">
+                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
+                    <div class="apartment-name2">{{specialization.entityDTO.name}}</div>
+                    <br/>
+                 </div>
+             </div>
         </div>
-    </section>
+    </div>
+
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container">
@@ -165,6 +175,6 @@
     <!-- Core theme JS-->
     <script src="../axios.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="Feedbacks.js"></script>
+    <script src="Appointment.js"></script>
 </body>
 </html>
