--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/Feedbacks.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/Feedbacks.html
@@ -110,10 +110,10 @@
         </div>
     </nav>
 
-
+    <div id="feedbacks">
     <!-- Contact Section-->
     <section class="page-section" id="contact">
-        <div class="container" id="feedbacks">
+        <div class="container" >
             <!-- Contact Section Heading-->
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Your feedbacks</h2>
             <!-- Icon Divider-->
@@ -123,11 +123,27 @@
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
                     <div class="short-info2">By Helena:</div>
                     <div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
-                    <br />
-                </div>
-            </div>
+                    <br/>
+                 </div>
+             </div>
         </div>
+    </section>
+        <div class="container">
+            <!-- Contact Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Your feedbacks</h2>
+            <!-- Icon Divider-->
+            <!-- Contact Section Form-->
+            <div class="commentBox" v-for="feedback in feedbacks">
+                <div class="col-lg-8 mx-auto">
+                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
+                    <div class="short-info2">By Helena:</div>
+                    <div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
+                    <br/>
+                 </div>
+             </div>
         </div>
+    </div>
+       
     </section>
     <!-- Footer-->
     <footer class="footer text-center">
