Add create page and getting specialization

--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -27,7 +27,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body >
+<body>
     <div id="app">
         <div class="header" id="header">
             <header id="header" class="fixed-top">
@@ -53,7 +53,7 @@
             <router-view style="margin-top:130px;"></router-view>
         </div>
     </div>
-    
+
 
 
     <script src="scripts/vue.js"></script>
@@ -63,5 +63,8 @@
     <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
     <script src="static/app.js"></script>
     <script src="static/homepage.js"></script>
+    <script src="static/test.js"></script>
+    <script src="static/createAppointment.js"></script>
+
 </body>
 </html>
