--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -40,7 +40,7 @@
                             <li class="drop-down">
                                 <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Zakazi pregled</a>
                                 <ul>
-                                    <li><a href="#">Standardno zakazivanje</a></li>
+                                    <li><a href="../public/appointment/createappointment.html">Standardno zakazivanje</a></li>
                                     <li><a href="#">Preporuceni termini</a></li>
                                 </ul>
                             </li>
