Modify frontend for create appointment

--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/vue.js"></script>
     <script src="scripts/vue-router.js"></script>
     <script src="scripts/axios.js"></script>
+    <script src="scripts/vuejs-datepicker.min.js"></script>
     <script src="scripts/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
     <script src="static/app.js"></script>
