--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/CreateAppointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/CreateAppointment.html
@@ -50,6 +50,8 @@
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Contact form JS-->
+    <script src="../scripts/vuejs-datepicker.min.js"></script>
+
     <script src="js/scripts.js"></script>
     <script src="../scripts/vue.js"></script>
     <script src="../scripts/axios.js"></script>
