Add front for observe appointments

--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -37,6 +37,7 @@
                         <ul>
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="/public/Communication/Feedbacks.html">Feedback</a></li>
+                            <li><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
                             <li class="drop-down">
                                 <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Zakazi pregled</a>
                                 <ul>
