--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -124,9 +124,9 @@
                         <div class="apartment-name2"><b>Date:</b> {{appointment.entityDTO.startDateTime.substr(0, 10)}}</div>
                         <div class="apartment-name2"><b>Time from:</b> {{appointment.entityDTO.startDateTime.substr(11, 5)}}</div>
                         <div class="apartment-name2"><b>Time to:</b> {{appointment.entityDTO.endDateTime.substr(11, 5)}}</div>
-                        <!-- <div v-if="appointment.entityDTO.doctorId == doctor.id" class="apartment-name2"><b>Doctor:</b> {{doctor.name}}</div>-->
+                        <div v-for="doctor in doctors" v-if="appointment.entityDTO.doctorId == doctor.id" class="apartment-name2"><b>Doctor:</b> {{doctor.entityDTO.name + ' ' + doctor.entityDTO.surname}}</div>
                         <br/>
-                        <div class="apartment-name2"><button>Cancel</button></div>
+                        <div class="apartment-name2" > <button> Cancel </button></div>
                         <br/>
                     </div>
                 </div>
