--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/CreateAppointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/CreateAppointment.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>HealthCare Clinic</title>
+    <title>MQuince Health</title>
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico.png" />
 
     <link href="../../src/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
     <link href="../../src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -27,19 +28,39 @@
 </head>
 <body>
     <!-- Navigation-->
-    <header id="header" class="fixed-top">
+    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
+        <div class="container d-flex">
+            <div class="contact-info mr-auto">
+                <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
+                <i class="icofont-phone"></i> +381 62432132
+                <i class="icofont-google-map"></i> Beogradska 15, Beograd
+            </div>
+            <div class="social-links">
+                <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="#" class="skype"><i class="icofont-skype"></i></a>
+            </div>
+        </div>
+    </div>
+    <header style="margin-top:10px" id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
             <h1 class="logo mr-auto"><a href="../index.html">MQUINCE Medic</a></h1>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="/public/Communication/Feedbacks.html">Feedback</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li class="drop-down">
+                        <a href="" class="feedback-btn" style="text-align: center; display: block">Feedback</a>
+                        <ul>
+                            <li><a href="../Communication/AddFeedback.html">Add feedback</a></li>
+                            <li><a href="../Communication/Feedbacks.html">Observe feedbacks</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
                     <li class="drop-down">
-                        <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Zakazi pregled</a>
+                        <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
                         <ul>
-                            <li><a href="#/">Standardno zakazivanje</a></li>
-                            <li><a href="#">Preporuceni termini</a></li>
+                            <li><a href="#/">Standard appointment</a></li>
+                            <li><a href="#">Recommended appointment</a></li>
                         </ul>
                     </li>
                 </ul>
