--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
@@ -1,4 +1,5 @@
-﻿﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -149,15 +150,16 @@
 
     <!-- Contact Section-->
     <section class="page-section" id="contact">
-        <div id="createAppointment">
+        <div>
             <h5 class=" text-center  mb-0 text-uppercase" style="margin-top: 2rem;">Your appointment</h5>
 
         </div>
     </section>
 
+    <!-- Footer-->
     <div style="margin-top:-45px" id="appointments">
         <div class="container">
-            <div style="height:190px; margin-left:auto;margin-right:auto;margin-bottom:25px;border: solid 1px rgb(22, 106, 181);border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;" class="commentBox"  v-for="appointment in appointments">
+            <div style="height:190px; margin-left:auto;margin-right:auto;margin-bottom:25px;border: solid 1px rgb(22, 106, 181);border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;" class="commentBox" v-for="appointment in appointments">
                 <div>
                     <table>
                         <tr>
@@ -177,8 +179,8 @@
                                     <div v-else class="apartment-name2"><b>Appointment status:</b>Finished</div>
                                 </div>
                             </td>
-                            <td  style="padding-left:150px;" disabled>
-                                <button v-if="Date.now() < new Date(appointment.entityDTO.endDateTime)" style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" id="sendMessageButton" type="button">Cancel appointment</button>
+                            <td style="padding-left:150px;">
+                                <button v-on:click="cancelAppointment(appointment.id)" v-if="Date.now() < new Date(appointment.entityDTO.endDateTime)" style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button">Cancel appointment</button>
                             </td>
                         </tr>
                     </table>
