--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/AdminFeedback.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/AdminFeedback.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <title>MQuince Health</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico.png" />
+
+    <link href="../../src/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../../src/assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <!-- Favicon-->
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="styles.css" rel="stylesheet" />
+    <link href="../../src/assets/style.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Freelancer - Start Bootstrap Theme</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -98,26 +122,53 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">MQuince</a>
-            <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
+        <div class="container d-flex">
+            <div class="contact-info mr-auto">
+                <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
+                <i class="icofont-phone"></i> +381 62432132
+                <i class="icofont-google-map"></i> Beogradska 15, Beograd
+            </div>
+            <div class="social-links">
+                <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="#" class="skype"><i class="icofont-skype"></i></a>
             </div>
         </div>
-    </nav>
+    </div>
+    <header style="margin-top:10px" id="header" class="fixed-top">
+        <div class="container d-flex align-items-center">
+            <h1 class="logo mr-auto"><a href="../index.html">MQUINCE Medic</a></h1>
+            <nav class="nav-menu d-none d-lg-block">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li class="drop-down active">
+                        <a href="" class="feedback-btn" style="text-align: center; display: block">Feedback</a>
+                        <ul>
+                            <li><a href="#/">Add feedback</a></li>
+                            <li><a href="../Communication/Feedbacks.html">Observe feedbacks</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
+                    <li class="drop-down">
+                        <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
+                        <ul>
+                            <li><a href="../Appointment/CreateAppointment.html">Standard appointment</a></li>
+                            <li><a href="#">Recommended appointment</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
     <!-- Contact Section-->
     <section class="page-section" id="contact">
         <div class="container" id="adminFeedback">
-            <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Your feedbacks</h2>
             <!-- Icon Divider-->
             <!-- Contact Section Form-->
+            <br/>
             <div class="col-lg-8 mx-auto">
                 <select name="feedbackOption" id="feedbackOption" v-model="status" v-on:change="statusChanged" style="width:200px; margin-left: 520px; margin-top: 20px;">
                     <option value="Published">Published</option>
@@ -125,33 +176,34 @@
                     <option value="Private">Private</option>
                 </select>
             </div>
-            <div class="commentBox" v-for="feedback in feedbacks">
-                <div class="col-lg-8 mx-auto">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                    <div class="short-info2">By&nbsp<i>{{feedback.entityDTO.user}}</i></div>
-                    <div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
-
-                    <br />
-                    <div style=" float: right; margin-top: 60px; margin-right: -10%;" v-if="feedback.entityDTO.publish == true && feedback.entityDTO.approved == false">
-                        <div>
-                            <button class="btn" @click="approve(feedback)">
-                                <i class="fa fa-check"></i>&nbsp&nbspApprove
-                            </button>
+            <div style="height:150px; margin-left:auto;margin-right:auto;margin-bottom:25px;border: solid 1px rgb(22, 106, 181);border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;" class="commentBox" v-for="feedback in feedbacks">
+                        <div style="display: inline-block">
+                            <table >
+                                <tr>
+                                    <td colspan="2">
+                                        <img src="../static/feedbackIcon.png" height="100" width="100">
+                                    </td>
+                                    <td>
+                                        <div style="margin-left:30px;margin-bottom:30px">
+                                             <div class="short-info2">By&nbsp<i>{{feedback.entityDTO.user}}</i></div>
+                                            <div class="apartment-name2">{{feedback.entityDTO.comment}}</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div style=" float: right; margin-top: 50px; margin-right: -340%;" v-if="feedback.entityDTO.publish == true && feedback.entityDTO.approved == false">
+                                            <div>
+                                                <button class="btn" @click="approve(feedback)">
+                                                    <i class="fa fa-check"></i>&nbsp&nbspApprove
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
-    <!-- Footer-->
-    <footer class="footer text-center">
-        <div class="container">
-            <div class="row">
-                <!-- Footer Location-->
-
-            </div>
-        </div>
-    </footer>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
