--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -66,7 +66,7 @@
                         </ul>
                     </li>
                     <li><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
-
+					<li><a href="/public/Login/Login.html">Login</a></li>
 
                     <li class="drop-down">
                         <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
