--- a/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
@@ -14,8 +14,7 @@
     <link href="../../src/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="../../src/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../../src/assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-	<!-- Favicon-->
+    <!-- Favicon-->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -26,7 +25,7 @@
     <link href="../../src/assets/style.css" rel="stylesheet">
 
 </head>
-<body id="page-top">
+<body>
     <!-- Navigation-->
     <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
@@ -48,55 +47,29 @@
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-				</ul>
+                </ul>
             </nav>
         </div>
     </header>
-	
-    <section style="margin-top:25px" class="page-section" id="contact">
-        <div class="container" id="login">
-            <!-- Contact Section Heading-->
-            <h5 class=" text-center  mb-0 text-uppercase" style="margin-top: 2rem;">Login</h5>
-
-            <!-- Icon Divider-->
-            <!-- Contact Section Form-->
-            <div class="row">		
-                <div class="col-lg-8 mx-auto">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                    <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                        <div class="control-group" style="margin-top:45px">
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2" style=" color: #6c757d;opacity: 1;">
-                                <input v-model="username" class="form-control" id="username" type="text" placeholder="Username" required="required" data-validation-required-message="Please enter your username." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="control-group">     
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2" style=" color: #6c757d;opacity: 1;">
-                                <input v-model="password" class="form-control" id="password" type = "password" placeholder="Password" required="required" data-validation-required-message="Please enter your password." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>    
-                        <br />
-                        <div id="success"></div>
-                        <div class="form-group"><button v-on:click="submit()" style="width: 20%; margin-left: 40%;" class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Login</button></div>
-                    </form>
-				</div>
-			</div>
-		</div>
-	</section>
-   <!-- Footer-->
+    <!-- Contact Section-->
+    <section style="margin-top:25px;min-height:700px" class="page-section" id="contact">
+        <div id="loginUser">
+        </div>
+    </section>
+    <!-- Footer-->
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Contact form JS-->
+    <script src="../scripts/vuejs-datepicker.min.js"></script>
 
     <script src="js/scripts.js"></script>
     <script src="../scripts/vue.js"></script>
     <script src="../scripts/axios.js"></script>
     <script src="../scripts/vue-router.js"></script>
     <script src="https://npmcdn.com/js-alert/dist/jsalert.min.js"></script>
-    <script src="../Login/Login.js"></script>
+    <script src="../Login/LoginUser.js"></script>
 </body>
 </html>
