--- a/MQuince/MQuince.WebAPI/clientapp/public/Patient home page/PatientHomePage.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Patient home page/PatientHomePage.html
@@ -15,6 +15,7 @@
     <link href="../../src/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../../src/assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<!-- Favicon-->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -53,37 +54,32 @@
         </div>
     </header>
 	
-    <section style="margin-top:25px" class="page-section" id="contact">
-        <div class="container" id="login">
-            <!-- Contact Section Heading-->
-            <h5 class=" text-center  mb-0 text-uppercase" style="margin-top: 2rem;">Login</h5>
-
-            <!-- Icon Divider-->
-            <!-- Contact Section Form-->
-            <div class="row">		
-                <div class="col-lg-8 mx-auto">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                    <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                        <div class="control-group" style="margin-top:45px">
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2" style=" color: #6c757d;opacity: 1;">
-                                <input v-model="username" class="form-control" id="username" type="text" placeholder="Username" required="required" data-validation-required-message="Please enter your username." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="control-group">     
-                            <div class="form-group floating-label-form-group controls mb-0 pb-2" style=" color: #6c757d;opacity: 1;">
-                                <input v-model="password" class="form-control" id="password" type = "password" placeholder="Password" required="required" data-validation-required-message="Please enter your password." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>    
-                        <br />
-                        <div id="success"></div>
-                        <div class="form-group"><button v-on:click="submit()" style="width: 20%; margin-left: 40%;" class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Login</button></div>
-                    </form>
-				</div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="..." alt="First slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="..." alt="Second slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="..." alt="Third slide">
 			</div>
 		</div>
-	</section>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+	</div>
    <!-- Footer-->
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -96,7 +92,9 @@
     <script src="../scripts/vue.js"></script>
     <script src="../scripts/axios.js"></script>
     <script src="../scripts/vue-router.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://npmcdn.com/js-alert/dist/jsalert.min.js"></script>
-    <script src="../Login/Login.js"></script>
+    <script src="../Patient home page/PatientHomePage.js"></script>
 </body>
 </html>
