Modify nav bar for specific users

--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
@@ -122,32 +122,9 @@
             </div>
         </div>
     </div>
-    <header style="margin-top:10px" id="header" class="fixed-top">
-        <div class="container d-flex align-items-center">
-            <h1 class="logo mr-auto"><a href="../index.html">MQUINCE Medic</a></h1>
-            <nav class="nav-menu d-none d-lg-block">
-                <ul>
-                    <li><a href="../../public/index.html">Home</a></li>
-                    <li class="drop-down">
-                        <a href="" class="feedback-btn" style="text-align: center; display: block">Feedback</a>
-                        <ul>
-                            <li><a href="../Communication/AddFeedback.html">Add feedback</a></li>
-                            <li><a href="../Communication/Feedbacks.html">Observe feedbacks</a></li>
-                        </ul>
-                    </li>
-                    <li class="active"><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
-                    <li class="drop-down">
-                        <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
-                        <ul>
-                            <li><a href="./CreateAppointment.html">Standard appointment</a></li>
-                            <li><a href="#">Recommended appointment</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="headerMain">
 
+    </div>
     <!-- Contact Section-->
     <section class="page-section" id="contact">
         <div>
@@ -202,5 +179,7 @@
     <script src="../scripts/vue-router.js"></script>
     <script src="https://npmcdn.com/js-alert/dist/jsalert.min.js"></script>
     <script src="../Appointment/Appointment.js"></script>
+    <script src="../Header/Header.js"></script>
+
 </body>
 </html>
