Modify nav bar for feedbacks

--- a/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Communication/AddFeedback.html
@@ -26,7 +26,7 @@
     <link href="styles.css" rel="stylesheet" />
     <link href="../../src/assets/style.css" rel="stylesheet">
 </head>
-<body id="page-top">
+<body id="addFeedback">
     <!-- Navigation-->
     <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
@@ -44,25 +44,30 @@
     </div>
     <header style="margin-top:10px" id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
-            <h1 class="logo mr-auto"><a href="../index.html">MQUINCE Medic</a></h1>
+            <h1 class="logo mr-auto"><a href="/public/index.html">MQUINCE Medic</a></h1>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li class="drop-down active">
-                        <a href="" class="feedback-btn" style="text-align: center; display: block">Feedback</a>
-                        <ul>
-                            <li><a href="#/">Add feedback</a></li>
-                            <li><a href="../Communication/Feedbacks.html">Observe feedbacks</a></li>
+                    <li><a href="/public/index.html">Home</a></li>
+                    <li v-bind:hidden="!showFeedback" class="drop-down">
+                        <a id="feedback" href="" class="feedback-btn" style="text-align: center; display: block">Feedback</a>
+                        <ul class="drop-down-menu">
+                            <li v-bind:hidden="!showAddFeedback"><a id="addFeedback" href="/public/Communication/AddFeedback.html">Add feedback</a></li>
+                            <li v-bind:hidden="!showObserveFeedback"><a href="/public/Communication/Feedbacks.html">Observe feedbacks</a></li>
                         </ul>
                     </li>
-                    <li><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
-                    <li class="drop-down">
+                    <li v-bind:hidden="!showObserveAppointment"><a href="/public/Appointment/Appointment.html">Observe appointment</a></li>
+
+
+                    <li v-bind:hidden="!showCreateAppointment" class="drop-down">
                         <a href="" class="appointment-btn scrollto" style="text-align: center; display: block; color:white">Create appointment</a>
                         <ul>
-                            <li><a href="../Appointment/CreateAppointment.html">Standard appointment</a></li>
+                            <li><a href="/public/Appointment/CreateAppointment.html">Standard appointment</a></li>
                             <li><a href="#">Recommended appointment</a></li>
                         </ul>
                     </li>
+                    <li v-on:click="logIn" v-bind:hidden="!showLogIn"><a href="#">Log in</a></li>
+                    <li v-on:click="logOut" v-bind:hidden="!showLogOut"><a href="#">Log out</a></li>
+
                 </ul>
             </nav>
         </div>
@@ -71,7 +76,7 @@
 
     <!-- Contact Section-->
     <section style="margin-top:25px" class="page-section" id="contact">
-        <div class="container" id="addFeedback">
+        <div class="container">
             <!-- Contact Section Heading-->
             <h5 class=" text-center  mb-0 text-uppercase" style="margin-top: 2rem;">Give Us Your Feedback</h5>
 
@@ -129,7 +134,7 @@
     <script src="assets/mail/jqBootstrapValidation.js"></script>
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
     <script src="../axios.js"></script>
     <script src="https://npmcdn.com/js-alert/dist/jsalert.min.js"></script>
