--- a/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Appointment/Appointment.html
@@ -1,5 +1,4 @@
-﻿﻿
-<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -133,7 +132,6 @@
         </div>
     </section>
 
-    <!-- Footer-->
     <div style="margin-top:-45px" id="appointments">
         <div class="container">
             <div style="height:190px; margin-left:auto;margin-right:auto;margin-bottom:25px;border: solid 1px rgb(22, 106, 181);border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;" class="commentBox" v-for="appointment in appointments">
