--- a/MQuince/MQuince.WebAPI/clientapp/public/index.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/index.html
@@ -75,7 +75,7 @@
                                 <li><a href="#">Recommended appointment</a></li>
                             </ul>
                         </li>
-                        <li v-on:click="logIn" v-bind:hidden="!showLogIn"><a href="#">Log in</a></li>
+                        <li  v-bind:hidden="!showLogIn"><a href=../public/Login/LoginUser.html">Log in</a></li>
                         <li v-on:click="logOut" v-bind:hidden="!showLogOut"><a href="#">Log out</a></li>
                     </ul>
                 </nav>
