--- a/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
+++ b/MQuince/MQuince.WebAPI/clientapp/public/Login/LoginUser.html
@@ -6,6 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>MQuince Health</title>
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico.png" />
 
     <link href="../../src/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
     <link href="../../src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -27,7 +28,8 @@
 </head>
 <body>
     <!-- Navigation-->
-    <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
+	
+    <div id="mainNav" class="d-none d-lg-flex align-items-center fixed-top">
         <div class="container d-flex">
             <div class="contact-info mr-auto">
                 <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@mquince.com</a>
@@ -56,20 +58,16 @@
         <div id="loginUser">
         </div>
     </section>
-    <!-- Footer-->
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Contact form JS-->
-    <script src="../scripts/vuejs-datepicker.min.js"></script>
-
-    <script src="js/scripts.js"></script>
-    <script src="../scripts/vue.js"></script>
-    <script src="../scripts/axios.js"></script>
-    <script src="../scripts/vue-router.js"></script>
-    <script src="https://npmcdn.com/js-alert/dist/jsalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="../axios.js"></script>
+    
     <script src="../Login/LoginUser.js"></script>
 </body>
 </html>
